@@ -1,6 +1,7 @@
 08. Oct 2011 Christoph Thielecke <crissi99@gmx.de>
 	- reenabling some export options after switching back from xml to csv or html fixed
 	- french translation updated (thanks to Josselin du PLESSIS)
+	- set media name from cd/dvd only if selected or at scan time
 
 12. Sep 2011 Christoph Thielecke <crissi99@gmx.de>
 	- path name for archive file at gtktalog xml import fixed
